# freeze

./: Cargo.toml  README.md
src/: cli.rs  db.rs  main.rs  mcp.rs  snapshot.rs  utils.rs
src/web/: api.rs  mod.rs  server.rs  styles.css
