[package]
name = "freeze"
version = "0.1.1"
edition = "2024"

[dependencies]
rusqlite = { version = "0.29", features = ["bundled", "blob"] }
sha2 = "0.10"
clap = { version = "4.3", features = ["derive"] }
indicatif = "0.17"
walkdir = "2.3"
chrono = "0.4"
dirs = "5.0"
anyhow = "1.0"
console = "0.15"
tabled = "0.16.0"
colored = "2.1.0"
zstd = "0.13"
